plugin agregation fonctionnel

--- a/nagios/nagios/etc/objects/commands.cfg
+++ b/nagios/nagios/etc/objects/commands.cfg
@@ -246,13 +246,13 @@ define command {
 ## collect CPU
 define command{
         command_name    collectd_cpu
-        command_line    /opt/Custom-Nagios-Plugins/check_collectd_cpu_combined.sh
+        command_line    METRICS='cpu/percent-interrupt cpu/percent-nice cpu/percent-softirq cpu/percent-steal cpu/percent-system cpu/percent-user cpu/percent-wait' /opt/Custom-Nagios-Plugins/check_collectd_combined.sh /opt/Custom-Nagios-Plugins/check_collectd_combined.sh
         }
 
 ## collect RAM
 define command{
         command_name    collectd_memory
-        command_line    /usr/bin/collectd-nagios -s /opt/collectd/var/run/collectd-unixsock -n memory/percent-$ARG1$ -H arthurb-Latitude-7490 -g none
+        command_line    METRICS='/memory/percent-buffered /memory/percent-cached /memory/percent-free /memory/percent-used' /opt/Custom-Nagios-Plugins/check_collectd_combined.sh /opt/Custom-Nagios-Plugins/check_collectd_combined.sh
         }
 
 ## collect Network
@@ -264,5 +264,5 @@ define command{
 ## collect Disk
 define command{
         command_name    collectd_disk
-        command_line    /usr/bin/collectd-nagios -s /opt/collectd/var/run/collectd-unixsock -n df-root/df_complex-$ARG1$ -H arthurb-Latitude-7490 -g none
+        command_line    METRICS='df-root/df_complex-free df-root/df_complex-reserved df-root/df_complex-used' /opt/Custom-Nagios-Plugins/check_collectd_combined.sh /opt/Custom-Nagios-Plugins/check_collectd_combined.sh
         }
