--- a/nagios/nagios/etc/objects/localhost.cfg
+++ b/nagios/nagios/etc/objects/localhost.cfg
@@ -159,22 +159,8 @@ define service{
 define service{
         use                             local-service,graphed-service          ; Name of service template to use
         host_name                       localhost
-        service_description             Collectd RAM buffered
-        check_command                   collectd_memory!buffered
-        check_interval                 1
-        }
-define service{
-        use                             local-service,graphed-service          ; Name of service template to use
-        host_name                       localhost
-        service_description             Collectd RAM cached
-        check_command                   collectd_memory!cached
-        check_interval                 1
-        }
-define service{
-        use                             local-service,graphed-service          ; Name of service template to use
-        host_name                       localhost
-        service_description             Collectd RAM free
-        check_command                   collectd_memory!free
+        service_description             Collectd RAM
+        check_command                   collectd_memory
         check_interval                 1
         }
         
@@ -191,21 +177,7 @@ define service{
 define service{
         use                             local-service,graphed-service          ; Name of service template to use
         host_name                       localhost
-        service_description             Collectd Disk free
-        check_command                   collectd_disk!free
-        check_interval                 1
-        }
-define service{
-        use                             local-service,graphed-service          ; Name of service template to use
-        host_name                       localhost
-        service_description             Collectd Disk reserved
-        check_command                   collectd_disk!reserved
-        check_interval                 1
-        }
-define service{
-        use                             local-service,graphed-service          ; Name of service template to use
-        host_name                       localhost
-        service_description             Collectd Disk used
-        check_command                   collectd_disk!used
+        service_description             Collectd Disk
+        check_command                   collectd_disk
         check_interval                 1
         }
