repare check_collectd_combined

--- a/nagios/nagios/etc/objects/commands.cfg
+++ b/nagios/nagios/etc/objects/commands.cfg
@@ -252,7 +252,7 @@ define command{
 ## collect RAM
 define command{
         command_name    collectd_memory
-        command_line    METRICS='/memory/percent-buffered /memory/percent-cached /memory/percent-free /memory/percent-used' /opt/Custom-Nagios-Plugins/check_collectd_combined.sh /opt/Custom-Nagios-Plugins/check_collectd_combined.sh
+        command_line    METRICS='memory/percent-buffered memory/percent-cached memory/percent-free memory/percent-used' /opt/Custom-Nagios-Plugins/check_collectd_combined.sh /opt/Custom-Nagios-Plugins/check_collectd_combined.sh
         }
 
 ## collect Network
