afficher graph par heure

--- a/nagios/nagiosgraph/etc/nagiosgraph.conf
+++ b/nagios/nagiosgraph/etc/nagiosgraph.conf
@@ -206,7 +206,7 @@ lineformat = warn=LINE1,D0D050;crit=LINE1,D05050
 #fixedscale = .*,PING,loss,.*;
 
 # Graphs to show in host-service page (hour, day, week, month, quarter, year)
-timeall = day,week,month,year
+timeall = hour,day,week,month,year
 # Graphs to show in host page
 timehost = day,week,month
 # Graphs to show in service page
