--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@
 !/nagios/nagiosgraph/etc/
 /nagios/nagiosgraph/etc/*
 !/nagios/nagiosgraph/etc/nagiosgraph.conf
-/nagios/nagios/etc/*
-!/nagios/nagios/etc/objects
+nagios/nagios/etc/nsca.cfg
+nagios/nagios/etc/send_nsca.cfg
 
 /graphite/conf/*
 /graphite/storage/*
