check nagios evry 1 sec

--- a/nagios/nagios/etc/objects/localhost.cfg
+++ b/nagios/nagios/etc/objects/localhost.cfg
@@ -148,7 +148,7 @@ define service{
 
 # collectd CPU
 define service{
-        use                             local-service,graphed-service          ; Name of service template to use
+        use                             collectd-service       ; Name of service template to use
         host_name                       localhost
         service_description             Collectd CPU
         check_command                   collectd_cpu
@@ -157,16 +157,15 @@ define service{
 
 # collectd RAM
 define service{
-        use                             local-service,graphed-service          ; Name of service template to use
+        use                             collectd-service           ; Name of service template to use
         host_name                       localhost
         service_description             Collectd RAM
         check_command                   collectd_memory
-        check_interval                 1
         }
         
 # collectd Network
 define service{
-        use                             local-service,graphed-service          ; Name of service template to use
+        use                             collectd-service           ; Name of service template to use
         host_name                       localhost
         service_description             Collectd Network packets
         check_command                   collectd_network_packets
@@ -175,7 +174,7 @@ define service{
 
 # collectd Disk
 define service{
-        use                             local-service,graphed-service          ; Name of service template to use
+        use                             collectd-service           ; Name of service template to use
         host_name                       localhost
         service_description             Collectd Disk
         check_command                   collectd_disk
