Add Data evry 1 sec

--- a/nagios/nagiosgraph/etc/nagiosgraph.conf
+++ b/nagios/nagiosgraph/etc/nagiosgraph.conf
@@ -309,7 +309,7 @@ withminimums = PING,HTTP
 #stepsize = 300
 # Specify a step size for specific hosts and services.
 #stepsizes = HOST,SERVICE,DATABASE=600;HOST,SERVICE,.*=1200;.*,.*,.*=300
-
+stepsizes = localhost,Collectd.*,.*=1;
 # RRD parameters.  These numbers control the number of stored data values
 # and thus RRD file size.  They are used when creating RRD files.
 # Each RRD file is created with 4 lines of RRA arguments:
@@ -328,7 +328,7 @@ withminimums = PING,HTTP
 # The default results in RRD files that are 20K to 75K in size:
 #resolution = 600 700 775 797
 # These values keep many more data points, but result in much larger files:
-#resolution = 17280 17520 32850 1095
+resolution = 17280 17520 32850 1095
 # Specify resolution for specific hosts and services.
 #resolutions = HOST,SERVICE,.*=17280 17520 32850 1095;.*,.*,.*=600 700 775 797
 #
