retention policy 1S for 1d nagios, graphite

--- a/nagios/nagiosgraph/etc/nagiosgraph.conf
+++ b/nagios/nagiosgraph/etc/nagiosgraph.conf
@@ -328,16 +328,17 @@ stepsizes = localhost,Collectd.*,.*=1;
 # The default results in RRD files that are 20K to 75K in size:
 #resolution = 600 700 775 797
 # These values keep many more data points, but result in much larger files:
-resolution = 17280 17520 32850 1095
+#resolution = 17280 17520 32850 1095
 # Specify resolution for specific hosts and services.
 #resolutions = HOST,SERVICE,.*=17280 17520 32850 1095;.*,.*,.*=600 700 775 797
+resolutions = localhost,Collectd.*,.*=17280 17520 32850 1095;
 #
 # The steps are defined by the four step values.
 # The default results in consolidated data points for day, week, month, year
 #step = 1 6 24 288
 # Specify step for specific hosts and services.
 #steps = HOST,SERVICE,.*=1 12 48 596;.*,.*,.*=1 6 24 288
-#
+steps = localhost,Collectd.*,.*=1 1 48 596;
 # The xff (xfiles factor) defines what part of a consolidation interval may be
 # made up from UNKNOWN data while the consolidated value is still regarded as
 # known.  It is given as the ratio of allowed UNKNOWN PDPs to the number of
