--- a/graphite/conf/storage-schemas.conf
+++ b/graphite/conf/storage-schemas.conf
@@ -21,6 +21,10 @@
 pattern = ^carbon\.
 retentions = 10s:6h,1m:90d
 
+[collectd]
+pattern = ^collectd\.
+retentions = 1s:1d,1m:90d,10m:1800d
+
 [default_1min_for_1day]
 pattern = .*
 retentions = 10s:6h,1m:6d,10m:1800d
