unixsock -> unixsock.sock

--- a/nagios/nagios/etc/objects/commands.cfg
+++ b/nagios/nagios/etc/objects/commands.cfg
@@ -258,7 +258,7 @@ define command{
 ## collect Network
 define command{
         command_name    collectd_network_packets
-        command_line    /usr/bin/collectd-nagios -s /opt/collectd/var/run/collectd-unixsock -n interface-wlp2s0/if_packets -H arthurb-Latitude-7490 -g none
+        command_line    /usr/bin/collectd-nagios -s /opt/collectd/var/run/collectd-unixsock.sock -n interface-wlp2s0/if_packets -H arthurb-Latitude-7490 -g none
         }
 
 ## collect Disk
