--- a/docker_grafana_graphite/docker-compose.yaml
+++ b/docker_grafana_graphite/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
       - graphite_data:/opt/graphite/storage
       - graphite_conf:/opt/graphite/conf
     networks:
-      - monitoring
+      - grafana_graphite
 
   grafana:
     container_name: grafana
@@ -28,10 +28,10 @@ services:
       - grafana_conf:/etc/grafana
       - grafana_home:/home/grafana
     networks:
-      - monitoring
+      - grafana_graphite
 
 networks:
-  monitoring:
+  grafana_graphite:
     driver: bridge
 
 volumes:
