--- a/docker_grafana_influxdb/docker-compose.yaml
+++ b/docker_grafana_influxdb/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   grafana:
-    container_name: grafana_i
+    container_name: grafana_influxdb
     image: grafana/grafana-oss
     ports:
       - "3002:3000"
